# llm-training

./: .gitignore  README.md  ddp_config.yml  pyproject.toml  sft.py  train.sh
data/: sample.jsonl
